--- a/src/Components/File/file.css
+++ b/src/Components/File/file.css
@@ -1,12 +1,11 @@
 .file {
-	height: 21vw;
-	width: 21vw;
 	position: absolute;
 	box-shadow: 0 2px 5px rgba(41, 41, 41, 0.25);
 	cursor: pointer;
-	z-index: 10;
+	z-index: var(--file-index);
 	padding: 5px;
-	/* animation: drop-animation 1.2s forwards; */
+	backdrop-filter: blur(5px);
+	background-color: var(--glass);
 }
 
 .file:hover {
@@ -21,78 +20,59 @@
 
 .file-options {
 	position: absolute;
-	top: -10;
-	right: -30;
-	background: var(--glass-theme);
-	height: 17vw;
-	width: 16vw;
+	bottom: -40px;
+	right: -30px;
+	background: var(--dark-glass);
+	z-index: var(--file-options-index);
+	padding: 10px;
+	padding-left: 5px;
 }
 
-.file-loading {
-	position: absolute;
-	height: 3vw;
-	width: 3vw;
-	bottom: 0;
-	right: 0;
-	margin-bottom: 15px;
-	margin-right: 8px;
-}
-
-.video-type {
-	width: 35vw !important;
+.file-options-item {
+	color: white;
+	font-size: 10px;
+	width: 100%;
+	display: flex;
+	height: 20px;
 }
 
 .file-type-indicator {
-	font-size: 10px;
+	width: 15px;
 	position: absolute;
-	background-color: tomato;
+	left: -8px;
+	top: -8px;
+	animation: warp-in 2.2 forwards ease-out;
+	animation-delay: 1s;
+	background-color: var(--dark-glass);
 	padding: 5px;
-	padding-left: 10px;
-	padding-right: 10px;
-	left: -10px;
+	border-radius: 50%;
+}
+
+@keyframes warp-in {
+	from {
+		display: none;
+		min-width: 0px;
+	}
+
+	to {
+		display: block;
+		min-width: 20px;
+	}
 }
 
 @keyframes drop-animation {
 	from {
-		height: 21vw;
-		width: 21vw;
+		height: var(--file-size);
+		width: var(--file-size);
 	}
 
 	to {
-		height: 10vw;
-		width: 10vw;
+		height: calc(var(--file-size) / 2);
+		width: calc(var(--file-size) / 2);
 	}
 
 	to {
-		height: 21vw;
-		width: 21vw;
-	}
-}
-
-@media only screen and (min-width: 510px) {
-	.file {
-		height: 100px;
-		width: 100px;
-	}
-
-	.video-type {
-		width: 180px !important;
-	}
-
-	@keyframes drop-animation {
-		from {
-			height: 100px;
-			width: 100px;
-		}
-
-		to {
-			height: 50px;
-			width: 50px;
-		}
-
-		to {
-			height: 100px;
-			width: 100px;
-		}
+		height: var(--file-size);
+		width: var(--file-size);
 	}
 }
