--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -20,5 +20,23 @@
 	width: 100%;
 	object-fit: cover;
 	position: absolute;
-	z-index: -10;
+	z-index: var(--home-bg-index);
+}
+
+.home-menu {
+	position: absolute;
+	background: var(--dark-glass);
+	z-index: var(--home-menu-index);
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+}
+
+.home-menu-item {
+	min-width: 70px;
+	color: white;
+	text-align: left;
+	font-size: 10px;
+	padding: 10px;
+	height: 30px;
 }
