--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -15,6 +15,17 @@
 	overflow: scroll;
 }
 
+.home-grid {
+	position: absolute;
+	max-height: 100%;
+	width: 100vw;
+	top: 0px;
+	display: flex;
+	flex-wrap: wrap;
+	padding: 80px 20px 30px;
+	overflow-y: scroll;
+}
+
 .home-bg {
 	height: 100%;
 	width: 100%;
