--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -22,7 +22,7 @@
 	top: 0px;
 	display: flex;
 	flex-wrap: wrap;
-	padding: 80px 20px 30px;
+	padding: 80px 20px 20px 20px;
 	overflow-y: scroll;
 }
 
