--- a/src/Pages/Settings/settings.css
+++ b/src/Pages/Settings/settings.css
@@ -1,10 +1,111 @@
 .settings {
 	height: 100vh;
+	width: 100vw;
+	top: 0px;
+	z-index: var(--settings-index);
 	background: var(--dark-glass);
+	background: #1a1a1a;
+	background: #323131;
 	scroll-snap-align: start;
 	color: white;
 	padding-top: 80px;
 	padding-left: 15px;
 	padding-right: 15px;
-	position: relative;
+	display: grid;
+	grid-template-columns: 2fr 1fr;
+	overflow-y: scroll;
+	position: absolute;
+}
+
+.settings-block1 {
+	height: 320px;
+	max-height: 480px;
+	min-width: 460px;
+	background: var(--glass);
+	padding: 20px;
+	display: grid;
+	grid-template-rows: 1fr 1fr;
+	overflow-y: scroll;
+	padding-bottom: 20px;
+}
+
+.settings-block1-row1 {
+	display: flex;
+}
+
+.settings-block1-row2 {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.collection-box {
+	height: 80px;
+	width: 80px;
+	background: var(--dark-glass);
+	border-radius: 10px;
+	background-size: contain;
+	background-repeat: no-repeat;
+	margin-right: 20px;
+	margin-bottom: 20px;
+	cursor: pointer;
+	display: grid;
+	place-items: center;
+}
+
+.collection-txt {
+	font-size: 14px;
+	margin-bottom: 10px;
+	color: var(--dark-glass);
+	font-weight: 600;
+}
+.collection-txt > span {
+	color: white;
+	font-weight: bold;
+	padding-left: 10px;
+}
+
+.settings-input-cntr {
+	width: 330px;
+	display: grid;
+	grid-template-columns: 1fr auto;
+}
+
+.settings-input-cntr-title {
+	grid-column: 1/3;
+	padding-left: 10px;
+	color: #1a1a1a;
+	/* color: var(--dark-glass); */
+	font-weight: bold;
+}
+
+.settings-input {
+	background: var(--dark-glass);
+	color: white;
+	padding-left: 20px;
+	padding-right: 20px;
+	letter-spacing: 1.6px;
+	font-size: 16px;
+	flex: 1;
+}
+
+.collection-btn {
+	background: var(--dark-glass);
+	height: 100%;
+	width: 50px;
+}
+
+.settings-block2 {
+	height: 20px;
+	background: var(--glass);
+	grid-column: 1/2;
+}
+
+.settings-block3 {
+	height: 80px;
+	background: var(--glass);
+}
+
+.settings-block4 {
+	height: 80px;
+	background: var(--glass);
 }
