--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
 	--viewer-index: 400;
 	--file-options-menu-index: 400;
 	--home-menu-index: 400;
+	--home-grid-index: 400;
 	--text-editor-index: 400;
 	--file-options-index: 500;
 	--viewer-index: 800;
