--- a/src/Pages/Viewer/viewer.css
+++ b/src/Pages/Viewer/viewer.css
@@ -11,4 +11,17 @@
 	height: 100%;
 	width: 100%;
 	object-fit: contain;
+	animation: viewer-image-bounce-in 0.5s forwards;
+}
+
+@keyframes viewer-image-bounce-in {
+	from {
+		opacity: 0;
+		transform: scale(0.5);
+	}
+
+	to {
+		opacity: 1;
+		transform: scale(1);
+	}
 }
